fix: CORS allowed origins via env var, disable show-sql